editor-components/call_to_action/call_to_action35/call_to_action35.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    position: relative;
    display: flex;
    flex-direction: column;
    padding: 0 !important;
    width: 100%;

    .background-section {
        position: relative;
        min-height: 380px;
        z-index: 1;

        .background-wrapper {
            position: absolute;
            inset: 0;
            z-index: 0;

            .background-image {
                position: absolute;
                width: 100%;
                height: 100%;
                object-fit: cover;
            }
        }

        .overlay {
            position: absolute;
            inset: 0;
            z-index: 1;
            background: var(--composer-overlay-color);
        }
    }

    .bottom-strip {
        width: 100%;
        min-height: 180px;
        background-color: var(--composer-html-background);
        z-index: 0;

        &.transparent {
            background-color: transparent;
        }
    }

    .max-content {
        position: absolute;
        top: 380px;
        transform: translateY(-50%);
        left: 0;
        right: 0;
        z-index: 2;
        padding: var(--composer-gap-xl);
        width: 100%;
    }

    .card {
        width: 100%;
        background-color: var(--composer-primary-color);
        border-radius: var(--composer-border-radius-md);
/*         padding: 80px 50px;
 */        margin: 0;

        .text-block .subtitle,
        .text-block .title,
        .text-block .description {
            color: var(--composer-font-color-secondary) !important;
        }

        .text-block .subtitle {
            background: none !important;
            padding: 0 !important;

            &::before {
                background-color: currentColor !important;
            }
        }
    }

    .content-wrapper {
        width: 100%;
        padding: 80px 50px;
    }

    .header {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-between;
        align-items: center;
        width: 100%;
        gap: calc(var(--composer-gap-xl) * 2);
    }

    .text-block {
        display: flex;
        flex-direction: column;
        align-items: flex-start;
        flex: 1;
        min-width: 0;
        text-align: left;

        .subtitle,
        .title,
        .description {
            color: var(--composer-font-color-primary);
            width: 100%;
            text-align: inherit;
        }

        .subtitle {
            width: fit-content;
            transform: none !important;
            text-align: left !important;
            align-self: flex-start;

            &::before {
                content: "";
                display: none;
            }
        }

    }

    .button-wrapper {
        display: flex;
        justify-content: center;
        align-items: center;
        flex-shrink: 0;
        padding: 0;
    }

    .button-group {
        display: grid;
        grid-template-columns: repeat(3, max-content);
        gap: var(--composer-gap-sm);

        .button {

            .button-icon,
            .button-text {
                content: "";
            }
        }
    }


    &.no-assets {
        .background-section {
            display: none;
        }

        .bottom-strip {
            display: none;
        }

        .max-content {
            position: relative;
            bottom: auto;
        }
    }
}

@container (max-width: #{$composer-tablet-width}) {
    .container {

        .card,
        .content-wrapper {
            padding: 50px 30px;
            margin: 0;
        }

        .text-block {
            flex: 1;
            text-align: left;
        }

        .button-group {
            justify-content: flex-end;
            margin-left: auto;
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        .max-content {
            padding: var(--composer-gap-md);

            .card,
            .content-wrapper {
                padding: 40px 20px;
                margin: 0;
            }

            .header {
                gap: var(--composer-gap-md);
            }

            .text-block {
                align-items: center;
                flex: 0 1 auto;
                text-align: center !important;

                .subtitle,
                .title,
                .description {
                    text-align: center;
                }
            }

            .card .text-block .subtitle {
                text-align: center !important;
                align-self: center;
            }
        }

        .button-wrapper {
            width: 100%;

            .button-group {
                margin-left: 0;
                display: flex;
                flex-wrap: wrap;
                justify-content: center;
            }
        }
    }
}

